[tool.poetry]
name = "streamlitplots"
version = "0.1.0"
description = ""
authors = ["gil-pyt <gil1999sp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
